RESOLVED FIXED214260
REGRESSION(r264272) [GTK][WPE] css3/color/composited-solid-backgrounds.html is failing
https://bugs.webkit.org/show_bug.cgi?id=214260
Summary REGRESSION(r264272) [GTK][WPE] css3/color/composited-solid-backgrounds.html i...
Lauro Moura
Reported 2020-07-13 09:59:56 PDT
After r264272, the test does not show the bottom row, with the `color(srgb R G B / 0.6)` background-color property. History: https://results.webkit.org/?suite=layout-tests&test=css3%2Fcolor%2Fcomposited-solid-backgrounds.html
Attachments
Patch (5.53 KB, patch)
2020-07-15 05:06 PDT, Carlos Garcia Campos
darin: review+
Carlos Garcia Campos
Comment 1 2020-07-15 05:06:40 PDT
Carlos Garcia Campos
Comment 2 2020-07-16 01:19:59 PDT
Note You need to log in before you can comment on or make changes to this bug.