REGRESSION(r264272) [GTK][WPE] css3/color/composited-solid-backgrounds.html is failing https://bugs.webkit.org/show_bug.cgi?id=214260

Reviewed by Darin Adler.

Source/WebCore:

The problem is that clampToComponentFloat is returning a uint8_t instead of a float, so we always end up
returning 0.

* platform/graphics/ColorUtilities.h:
(WebCore::clampToComponentFloat):

Tools:

Add a test case.

* TestWebKitAPI/Tests/WebCore/ExtendedColorTests.cpp:
(TestWebKitAPI::TEST):

LayoutTests:

Remove expectations of css3/color/composited-solid-backgrounds.html.

* platform/glib/TestExpectations:

Canonical link: https://commits.webkit.org/227199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264448 268f45cc-cd09-0410-ab3c-d52691b4dbfc